fixed white space under header

--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -1,7 +1,3 @@
-body > .content, body > .container-fluid {
-    padding-top : 60px;
-}
-
 .form-control {
     border-radius : 0;
     border        : none;
