--- a/public/assets/css/header.css
+++ b/public/assets/css/header.css
@@ -1,7 +1,8 @@
 @media (min-width : 768px) {
     .navbar-xs {
-        min-height : 40px;
-        height     : 40px;
+        min-height    : 40px;
+        height        : 40px;
+        margin-bottom : 0;
     }
 
     .navbar-xs .navbar-brand {
